package trabajoFinal.enums;

public enum EstadoEspacio {
    DISPONIBLE,
    OCUPADO,
    FUERA_DE_SERVICIO
}
