package trabajoFinal.enums;

public enum EstadoVehiculo {
    DENTRO,
    SALIO
}
