package trabajoFinal.enums;

public enum RolSistema {
    OPERADOR,
    ADMINISTRADOR
}
