package trabajoFinal.enums;

public enum TipoEspacio {
    CARRO,
    MOTOCICLETA,
    BICICLETA
}
