package trabajoFinal.enums;

public enum TipoUsuario {
    ESTUDIANTE,
    DOCENTE,
    ADMINISTRATIVO,
    VISITANTE
}
