package trabajoFinal.enums;

public enum TipoVehiculo {
    CARRO,
    MOTOCICLETA,
    BICICLETA
}
