package trabajoFinal.excepcion;

public class ParkUQException extends RuntimeException {

    public ParkUQException(String mensaje) {
        super(mensaje);
    }
}
